# rwp

./: Cargo.toml  README.md  rest_nvim_results
c02/todo_app/: Cargo.toml  state.json
c02/todo_app/src/: main.rs  state.rs
c02/web_app/: Cargo.toml
c03/async_functions/: Cargo.toml
c03/async_functions/src/: main.rs
c03/basic_async/: Cargo.toml
c03/basic_async/src/: main.rs
c03/basic_setup/: Cargo.toml
c03/basic_setup/src/: main.rs
c03/managing_views/: Cargo.toml
c03/managing_views/src/: main.rs
c03/multi_servers/: Cargo.toml
c03/multi_servers/src/: main.rs
c04/basic_setup_c04/: Cargo.toml
c04/basic_setup_c04/src/: main.rs
c04/extract_data/: Cargo.toml  state.json
c04/json_serialization/: Cargo.toml  state.json
c04/json_serialization/src/: main.rs  processes.rs
c04/passing_params/: Cargo.toml  state.json
c05/display_html/: Cargo.toml
c05/display_html/templates/: main.html
c05/inject_css/: Cargo.toml  state.json
c05/inject_header/: Cargo.toml  state.json
c05/inject_js/: Cargo.toml  state.json
c06/connect_to_db/: Cargo.toml
c06/data_models/: Cargo.toml
c06/data_models/css/: main.css
c06/data_models/src/views/to_do/: create.rs  delete.rs  edit.rs
c06/data_models/templates/: main.html
c06/define_db/: Cargo.toml
c07/: Cargo.toml  test.http
c07/javascript/: login.js
c07/src/: database.rs  main.rs
c07/templates/: login.html
c08/: Cargo.toml  test.http
c08/css/: base.css
c08/javascript/: main.js
c08/src/: main.rs
c09/: Cargo.toml  test.http  to_do_items.postman_collection_IN_BOOK.json
c09/src/: main.rs
(+91 files in other folders)
