[workspace]
members = [
    "c02/web_app",
    "c02/todo_app",
    "c03/basic_setup",
    "c03/basic_async",
    "c03/async_functions",
    "c03/multi_servers",
    "c03/managing_views",
    "c04/basic_setup_c04",
    "c04/passing_params",
    "c04/json_serialization",
    "c04/extract_data",
    "c05/display_html",
    "c05/inject_js",
    "c05/inject_css",
    "c05/inject_header",
    "c06/define_db",
    "c06/connect_to_db",
    "c06/data_models",
    "c07",
    "c08",
]
